Bugzilla bug #64278: call sched_get_priority_min/max to get the minimum and maximum priorities of the default scheduling policy.  Thanks to Matt Beauregard <marauder@marauder.tm> for reporting this bug.